bug fix: waybar nerd icon small

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: PP Neue Montreal,Manrope, Roboto, Helvetica, Arial, sans-serif;
+    font-family:PP Neue Montreal, JetBrainsMono Nerd Font, sans-serif;
     font-size: 14px;
     font-weight: 500;
     min-height: 0; 
@@ -170,10 +170,7 @@ button:hover {
 	padding: 0 0px;
 }
 
-#power-profiles-daemon.performance {
-    background-color: rgba(255,255,255,0.5);
-    color: #000;
-}
+
 
 #power-profiles-daemon.balanced {
     /* background-color: #2980b9; */
@@ -187,13 +184,14 @@ button:hover {
 
 #idle_inhibitor {
     /* background-color: #2d3436; */
-	margin: 3px 6px;
-	padding: 0 2px 0 6px;
+	margin: 4px 6px;
+	padding: 0 4px 0 6px;
 }
 
-#idle_inhibitor.activated {
-    background-color: rgba(255,255,255,0.5);
-    color: #000;
+#power-profiles-daemon.performance, #idle_inhibitor.activated {
+    background-color: rgba(255,255,255,0.4);
+    color: #111;
+
 }
 
 /*
